@@ -1,3 +1,9 @@
+2005-09-14  Yves Combe  <yves@ycombe.net>
+
+	add numbers in filter boards tool.
+
+	* src/boards/python/admin/board_list.py:
+
 2005-09-13  Yves Combe,,,  <yves@ycombe.net>
 
 	 new version was not written in the db when reread boards because of version change.
